...
            "state": "translated",
            "value": "Gereed"
          }
        }
      }
    },
    "Geschiedenis": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Verlauf"
          }
...
            "state": "translated",
            "value": "Nieuwe notitie"
          }
        }
      }
    },
    "Nieuwe notitie (start direct met opnemen)": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Neue Notiz (Aufnahme startet sofort)"
          }
...
            "state": "translated",
            "value": "Notitie verwijderen"
          }
        }
      }
    },
    "Notities": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Notizen"
          }
...
            "state": "translated",
            "value": "Notulen"
          }
        }
      }
    },
    "Notulist": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Protokollant"
          }
...
            "state": "translated",
            "value": "Opnemen"
          }
        }
      }
    },
    "Opnemen en transcriptie": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Aufnahme und Transkription"
          }
...
            "value": "Schließen"
          }
        },
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
        },
        "nl": {
          "stringUnit": {
            "state": "translated",
            "value": "Sluiten"
...
            "state": "translated",
            "value": "Sync"
          }
        }
      }
    },
    "Synchronisatie": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Synchronisierung"
          }
...
            "state": "translated",
            "value": "Synchroniseren doe je met de Sync-knop op de pagina Geschiedenis."
          }
        }
      }
    },
    "Synchroniseren via iCloud": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Über iCloud synchronisieren"
          }
...
